app/src/helpers/review_state/snapshots/anki_sentences__helpers__review_state__review_state_test__test_review_state__from_clamped.snap
---
source: app/src/helpers/review_state/review_state_test.rs
expression: s.rounded()
---
ReviewState {
    interval: 1,
    ease_factor: 1.3,
    repetitions: 5,
}
