app/src/helpers/review_state/snapshots/anki_sentences__helpers__review_state__review_state_test__test_review_state__full_review_story.snap
---
source: app/src/helpers/review_state/review_state_test.rs
expression: log
---
[
    ReviewState {
        interval: 1,
        ease_factor: 2.3,
        repetitions: 0,
    },
    ReviewState {
        interval: 1,
        ease_factor: 2.4,
        repetitions: 1,
    },
    ReviewState {
        interval: 2,
        ease_factor: 2.5,
        repetitions: 2,
    },
    ReviewState {
        interval: 4,
        ease_factor: 2.5,
        repetitions: 3,
    },
    ReviewState {
        interval: 10,
        ease_factor: 2.6,
        repetitions: 4,
    },
]
